--------------------------------------------------------------------------------------------------
Release notes version 1.9.2_beta : Enhancements, modifications and corrected bugs since version 1.9.1 :
--------------------------------------------------------------------------------------------------
25/04/23 (TRUST) Keyword      : New syntax for setting residuals computation: residuals { [norm L2|max] [relative 0|1] }. norm (L2 norm or max norm by default). if relative (default 0), normalize with the first residuals (old seuil_statio_relatif_deconseille keyword). See validation form named "Residuals".
25/04/23 (TRUST) New feature  : Two new fields (that use MEDCoupling) can be used to couple problems defined on overlapping domains with different meshes: Champ_fonc_interp & Champ_fonc_tabule_morceaux_interp.
24/04/23 (TRUST) New option   : In case of a code crash, an exit message is displayed containing the line number in the datafile triggering the error.
19/04/23 (TRUST) Validation   : Add a new jupyter notebook to compare mono/multi-phase simulations with EOS and CoolProp.
14/04/23 (TRUST) New Feature  : option "decoup" is now available for Champ_Fonc_MED and allows the parallel loading of big MED fields.
14/04/23 (TRUST) Change       : Lire_MEDFile/Read_MEDFile and Champ_Fonc_MEDFile are not supported anymore.
06/04/23 (TRUST) Minor change : Use iteration instead of time when calling visit from trustutils in validation sheets
04/04/23 (TRUST) Major change : TRUST can be linked to a pre-compiled static library of CoolProp (./configure -with-coolprop=<YOUR_PATH_TO_COOLPROP_INSTALL>).
03/04/23 (TRUST) Portability  : Fedora 38 is supported with: sudo dnf install patch g++ gfortran libX11-devel mesa-libGLU-devel texlive-scheme-full
03/04/23 (TRUST) Portability  : GNU compilers 13.0.1 are supported
21/03/23 (TRUST) Portability  : VisIt works now on Ubuntu 22