@@ -1,25 +1,17 @@
 Version	Qui				Tache
-1.9.2   trust@cea.fr            warning postraitement med si proc > 5120
 1.9.2   trust@cea.fr            faire unset TMPDIR dans le configure
-1.9.2   trust@cea.fr            Supprimer host_irene-ccrt.xml de visit car fait bloquer visit sur irene avec NiceDCV
 1.9.2   trust@cea.fr            Voir si on peut retirer .dico de git
 1.9.2   trust@cea.fr            correction xmax dans Octree_Double.cpp, cf mail de Luc. nb : ce fichier existe a 2 endroits : dans outils et dans src
 1.9.2   trust@cea.fr            empecher d'installer TRUST sur home titania
-1.9.2   trust@cea.fr            mise a jour tuto utilisateur/dev avec jupyter
 1.9.2   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
 1.9.2   pierre.ledac@cea.fr     Supprimer OSQP dans le futur des que PolyMAC_old disparait
-1.9.2   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
 1.9.2   pierre.ledac@cea.fr     Port muscl_new sur GPU avec OpenMP et optimisation du code (3 fois plus lent que muscl actuellement). Trouver nom adequat.
 1.9.2   adrien.bruneton@cea.fr  Revoir installation de mpi4py au TGCC/orcus/...
 1.9.2   adrien.bruneton@cea.fr  Try to add Champ_Uniform into Champ_implementation_P0.cpp
 1.9.2   adrien.bruneton@cea.fr  Fiabiliser l'utilisation de jenkins
 1.9.2   adrien.bruneton@cea.fr  ameliorer VerifData pour pouvoir faire l equivalent de check_jdd sur un cas test (au moins la lecture / ecriture / relecture du JDD)
-1.9.2   adrien.bruneton@cea.fr  Nettoyer le vieux code med fichier
-1.9.2   adrien.bruneton@cea.fr  Revoir LireMED pour ne pas utiliser les familles mais que les groupes
-1.9.2   adrien.bruneton@cea.fr  Mettre dans un fichier separe la classe Champ_Fonc_MEDfile
 1.9.2   pierre.ledac@cea.fr     Passer les fichiers RELEASE_NOTE et DEVELOPER_NOTES en markdown licence.txt (voir si basculer aussi sur les Baltiks)
 1.9.2   trust@cea.fr            LDC: Decouper et lancer en parallele sur quelques pas de temps l etude de PE Canal_172M_PE_4913 sur un cluster
-1.9.2   trust@cea.fr            LDC: ouvrir une DI pour "Branches a integrer dans TRUST pour prochaine version 185" (cf DI 188128)
 1.9.2   trust@cea.fr            LDC: ouvrir une DI pour actions de livraison (cf di 188127)
 1.9.2   trust@cea.fr            LDC: ouvrir une DI pour installation reseau (cf di 188129)
 1.9.2   trust@cea.fr            LDC: ouvrir une DI pour installation reseau Titania (cf di 183455)
@@ -36,13 +28,13 @@ Version	Qui				Tache
 1.9.2   trust@cea.fr            LDC: Creer new RELEASE dans TRUST et TrioCFD
 1.9.2   trust@cea.fr            LDC: mettre a jour depot doc html sur github
 1.9.2   trust@cea.fr            LDC: Apres feu vert CEA - demander a poser le tag sur les baltiks
+1.9.2   trust@cea.fr            LDC: sauvegarder main_validation
 
 
 
 1.9.x   trust@cea.fr            Voir si on peut retirer .dico de git
 1.9.x   trust@cea.fr            correction xmax dans Octree_Double.cpp, cf mail de Luc. nb : ce fichier existe a 2 endroits : dans outils et dans src
 1.9.x   trust@cea.fr            empecher d'installer TRUST sur home titania
-1.9.x   trust@cea.fr            mise a jour tuto utilisateur/dev avec jupyter
 1.9.x   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
 1.9.x   pierre.ledac@cea.fr     Supprimer OSQP dans le futur des que PolyMAC_old disparait
 1.9.x   pierre.ledac@cea.fr     Modifier scripts Baltik pour qu un Baltik quelconque puisse etre deplace sans souci apres installation
@@ -51,12 +43,8 @@ Version	Qui				Tache
 1.9.x   adrien.bruneton@cea.fr  Try to add Champ_Uniform into Champ_implementation_P0.cpp
 1.9.x   adrien.bruneton@cea.fr  Fiabiliser l'utilisation de jenkins
 1.9.x   adrien.bruneton@cea.fr  ameliorer VerifData pour pouvoir faire l equivalent de check_jdd sur un cas test (au moins la lecture / ecriture / relecture du JDD)
-1.9.x   adrien.bruneton@cea.fr  Nettoyer le vieux code med fichier
-1.9.x   adrien.bruneton@cea.fr  Revoir LireMED pour ne pas utiliser les familles mais que les groupes
-1.9.x   adrien.bruneton@cea.fr  Mettre dans un fichier separe la classe Champ_Fonc_MEDfile
 1.9.x   pierre.ledac@cea.fr     Passer les fichiers RELEASE_NOTE et DEVELOPER_NOTES en markdown licence.txt (voir si basculer aussi sur les Baltiks)
 1.9.x   trust@cea.fr            LDC: Decouper et lancer en parallele sur quelques pas de temps l etude de PE Canal_172M_PE_4913 sur un cluster
-1.9.x   trust@cea.fr            LDC: ouvrir une DI pour "Branches a integrer dans TRUST pour prochaine version 185" (cf DI 188128)
 1.9.x   trust@cea.fr            LDC: ouvrir une DI pour actions de livraison (cf di 188127)
 1.9.x   trust@cea.fr            LDC: ouvrir une DI pour installation reseau (cf di 188129)
 1.9.x   trust@cea.fr            LDC: ouvrir une DI pour installation reseau Titania (cf di 183455)
