@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.2_beta : Enhancements, modifications and corrected bugs since version 1.9.1 :
 --------------------------------------------------------------------------------------------------
+03/05/23 (TRUST) Output       : MED post-processing format not allowed if nbproc > 5120. Prefer lata format in parallel computation.
 25/04/23 (TRUST) Keyword      : New syntax for setting residuals computation: residuals { [norm L2|max] [relative 0|1] }. norm (L2 norm or max norm by default). if relative (default 0), normalize with the first residuals (old seuil_statio_relatif_deconseille keyword). See validation form named "Residuals".
 25/04/23 (TRUST) New feature  : Two new fields (that use MEDCoupling) can be used to couple problems defined on overlapping domains with different meshes: Champ_fonc_interp & Champ_fonc_tabule_morceaux_interp.
 24/04/23 (TRUST) New option   : In case of a code crash, an exit message is displayed containing the line number in the datafile triggering the error.
